tests/baselines/reference/invalidForContinueStatements.errors.txt
invalidForContinueStatements.ts(4,1): error TS1104: A 'continue' statement can only be used within an enclosing iteration statement.
invalidForContinueStatements.ts(8,9): error TS1115: A 'continue' statement can only jump to a label of an enclosing iteration statement.
invalidForContinueStatements.ts(14,9): error TS18055: Cannot find label 'TWO'.
invalidForContinueStatements.ts(21,9): error TS18055: Cannot find label 'THREE'.
invalidForContinueStatements.ts(27,5): error TS1115: A 'continue' statement can only jump to a label of an enclosing iteration statement.
invalidForContinueStatements.ts(36,5): error TS1115: A 'continue' statement can only jump to a label of an enclosing iteration statement.


==== invalidForContinueStatements.ts (6 errors) ====
    // All errors
    
    // naked continue not allowed
    continue;
    ~~~~~~~~~
!!! error TS1104: A 'continue' statement can only be used within an enclosing iteration statement.
    
    // non-existent label
    ONE:
    for(;;) continue TWO;
            ~~~~~~~~~~~~~
!!! error TS1115: A 'continue' statement can only jump to a label of an enclosing iteration statement.
    
    // continue from inside function
    TWO:
    for(;;) {
        var x = () => {
            continue TWO;
            ~~~~~~~~~~~~~
!!! error TS18055: Cannot find label 'TWO'.
        }
    }
    
    THREE:
    for(;;) {
        var fn = function () {
            continue THREE;
            ~~~~~~~~~~~~~~~
!!! error TS18055: Cannot find label 'THREE'.
        }
    }
    
    // continue forward
    for(;;) {
        continue FIVE;
        ~~~~~~~~~~~~~~
!!! error TS1115: A 'continue' statement can only jump to a label of an enclosing iteration statement.
        FIVE:
        for (; ;) { }
    }
    // label on non-loop statement
    NINE:
    var y = 12;
    
    for(;;) {
        continue NINE;
        ~~~~~~~~~~~~~~
!!! error TS1115: A 'continue' statement can only jump to a label of an enclosing iteration statement.
    }